# fsspec-browser

./: .dockerignore  .fsspecignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  app_test.py  compose.yml  pyproject.toml
.github/workflows/: build.yml
docker/: Dockerfile  run.sh
templates/: 404.html  index.html
