[tool.poetry]
name = "fsspec-browser"
version = "0.1.0"
description = "**fsspec-browser** utilizes the fsspec python library to implement a minimal frontend to browse stored data."
authors = ["Jens Blawatt <jblawatt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
fsspec = "^2024.6.1"
jinja2 = "^3.1.4"
pydantic-settings = "^2.4.0"
uvicorn = "^0.30.5"
s3fs = "^2024.6.1"
adlfs = "^2024.7.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ruff = "^0.5.7"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]

python_version = "3.12"

# strict
# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Getting these passing should be easy
strict_equality = true
extra_checks = true

# Strongly recommend enabling this one as soon as you can
check_untyped_defs = false

# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
disallow_subclassing_any = true
disallow_untyped_decorators = false
disallow_any_generics = true

# These next few are various gradations of forcing use of type annotations
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

# This one isn't too hard to get passing, but return on investment is lower
no_implicit_reexport = true

# This one can be tricky to get passing if you use a lot of untyped libraries
warn_return_any = true

ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "F", "SIM", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
